<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_app_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        app:layout_heightPercent="60%">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="AppName"/>

                <TextView
                    android:id="@+id/tv_app_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/gray"
                    tools:text="1.2.3"/>
            </LinearLayout>

            <TextView
                android:id="@+id/app_package_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                tools:text="com.owen.appplus"/>

            <TextView
                android:id="@+id/tv_app_version_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                tools:text="version: 1"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_app_detail">

        <View
            android:id="@+id/view_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="?android:attr/listDivider"/>

        <View
            android:id="@+id/view_vertical_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/tv_share"
            style="@style/btn_action"
            android:layout_above="@id/view_horizontal_line"
            android:layout_toLeftOf="@id/view_vertical_line"
            android:layout_toStartOf="@id/view_vertical_line"
            android:drawableTop="@drawable/ic_share_black_24dp"
            android:text="@string/tv_share_app"/>

        <TextView
            android:id="@+id/tv_export"
            style="@style/btn_action"
            android:layout_above="@id/view_horizontal_line"
            android:layout_toEndOf="@id/view_vertical_line"
            android:layout_toRightOf="@id/view_vertical_line"
            android:drawableTop="@drawable/ic_archive_black_24dp"
            android:text="@string/export_to_local_dish"/>

        <TextView
            android:id="@+id/tv_more_detail"
            style="@style/btn_action"
            android:layout_below="@id/view_horizontal_line"
            android:layout_toLeftOf="@id/view_vertical_line"
            android:layout_toStartOf="@id/view_vertical_line"
            android:drawableTop="@drawable/ic_error_outline_black_24dp"
            android:text="@string/view_more_detail"/>

        <TextView
            android:id="@+id/tv_more_operation"
            style="@style/btn_action"
            android:layout_below="@id/view_horizontal_line"
            android:layout_toEndOf="@id/view_vertical_line"
            android:layout_toRightOf="@id/view_vertical_line"
            android:drawableTop="@drawable/ic_more_vert_black_24dp"
            android:text="@string/more_operation"/>
    </RelativeLayout>
</android.support.percent.PercentRelativeLayout>